Poprawka 1 do zd 1

--- a/index.html
+++ b/index.html
@@ -4,13 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My first project</title>
-    <link rel="stylesheet" href="CSS/style.css" />
+    <title>Studio</title>
   </head>
 
-  <body>
+  <body class="main">
     <header>
-      <h2>WebStudio</h2>
+      <a href="#">WebStudio</a>
       <nav>
         <ul>
           <li><a href="#">Agencja</a></li>
@@ -32,25 +31,31 @@
         <button type="button">Zamów usługe</button>
       </section>
 
-      <section>
-        <h2>LOREM IPSUM</h2>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu
-          sem. Sed non sodales dui. malesuada Interdum et malesuada
-        </p>
+      <ul>
+        <li>
+          <h2>LOREM IPSUM</h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
+            arcu sem. Sed non sodales dui. malesuada Interdum et malesuada
+          </p>
+        </li>
 
-        <h2>LOREM IPSUM</h2>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu
-          sem. Sed non sodales dui. Interdum et malesuada
-        </p>
+        <li>
+          <h2>LOREM IPSUM</h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
+            arcu sem. Sed non sodales dui. Interdum et malesuada
+          </p>
+        </li>
 
-        <h2>LOREM IPSUM</h2>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu
-          sem. Sed non sodales dui. Interdum et malesuada
-        </p>
-      </section>
+        <li>
+          <h2>LOREM IPSUM</h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
+            arcu sem. Sed non sodales dui. Interdum et malesuada
+          </p>
+        </li>
+      </ul>
 
       <!--Czym się zajmujemy-->
       <section>
@@ -96,7 +101,7 @@
                 height="390"
               />
               <h3>Maciej Wiesłowski</h3>
-              <p>Product Designer</p>
+              <span>Product Designer</span>
             </li>
 
             <li>
@@ -107,7 +112,7 @@
                 height="390"
               />
               <h3>Marta Kowalska</h3>
-              <p>Frontend Developer</p>
+              <span>Frontend Developer</span>
             </li>
 
             <li>
@@ -118,7 +123,7 @@
                 height="390"
               />
               <h3>Robert Lewandowski</h3>
-              <p>Marketing</p>
+              <span>Marketing</span>
             </li>
 
             <li>
@@ -129,7 +134,7 @@
                 height="390"
               />
               <h3>Jhon Smith</h3>
-              <p>UI Designer</p>
+              <span>UI Designer</span>
             </li>
           </ul>
         </div>
@@ -138,7 +143,7 @@
 
     <footer>
       <!--Kontakt-->
-      <h2>WebStudio</h2>
+      <a href="#">WebStudio</a>
       <address>
         <ul>
           <li><a href="#">m. Warszawa, Aleje Jerozolimskie 21</a></li>
